<resources>
    <string name="app_name">Field Data Recorder</string>
    <string name="btnFarms">Farm Details</string>
    <string name="btnPlanters">Planters</string>
    <string name="btnOverseers">Overseers</string>
    <string name="btnPeople">People &amp; Groups</string>
    <string name="bntAddPlanter">Add</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="bntAddOvsr">Add</string>
    <string name="bntAddFarm">Add</string>
    <string name="bntAddField">Add</string>

    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_add">Add </string>
    <string name="action_back">Back</string>
    <string name="action_exportdb">Export Data as CSV</string>
    <string name="action_info">App Info</string>

    <string name="c_gis_section_2018">© GIS Section 2018</string>
    <string name="ExportCSV">Export to CSV</string>
    <string name="AppInfo">App Info</string>
    <string name="ExportCSVConfirm">Are you sure you want to export data to CSV? Only farms with field records will be exported. Once exported, you can no longer export the same farm again so please make sure all fields have already been recorded.</string>
    >
    <string name="ExportButton">Export</string>
    <string name="OKButton">OK</string>
    <string name="CancelButton">Cancel</string>
    <string name="btnFields">Surveys</string>
    <string name="mnuFarm">Farm Details</string>
    <string name="discard">Discard Changes?</string>
    <string name="discardMsg">Your changes will not be saved.</string>
    <string name="DiscardBtn">Discard</string>
    <string name="action_restoreall">Restore All Farms</string>
    <string name="Restore">Restore</string>
    <string name="RestoreConfirm">This will delete previous export dates and enable you to export all farms again. Contents of the FDRMobile/Exports folder will also be deleted.</string>
    <string name="RestoreTitle">Restore Farms?</string>
    <string name="action_backupdb">Backup DB</string>
    <string name="action_restoresel">Restore Selected Farms</string>
    <string name="BackupDBTitle">Backup DB</string>
    <string name="BackupDBConfirm">You are about to create a backup of the whole database.</string>
    <string name="Backup">Backup</string>
    <string name="action_whatsnew">Whats New?</string>
    <string name="WhatsNew">Whats New?</string>

    <string-array name="soilTypes">
        <item>- Soil Type -</item>
        <item>Sandy Clay Loam (SCL)</item>
        <item>Sandy Loam (SL)</item>
        <item>Sandy (S)</item>
        <item>Loamy Sand (LS)</item>
        <item>Loam (L)</item>
        <item>Clay Loam (CL)</item>
        <item>Clay (C)</item>
        <item>Heavy Clay (HC)</item>
    </string-array>
    <string-array name="suitability">
        <item>- Suitability -</item>
        <item>Suitable (S)</item>
        <item>Partially Suitable (P)</item>
        <item>Conditionally Suitable (CS)</item>
        <item>Not Suitable (NS)</item>
        <item>Not in Use (NU)</item>
        <item>To be Determined (TBD)</item>
    </string-array>
    <string-array name="limitations">
        <item>Area less than 0.80ha (HAR)</item>
        <item>Hindrance - Boulders (HBO)</item>
        <item>Hindrance - Canal (HCA)</item>
        <item>Hindrance - Rocks (HR)</item>
        <item>Hindrance - Row width less than 1.2m (HRW)</item>
        <item>Hindrance - Soil Type (HSST)</item>
        <item>Hindrance - Stones (HST)</item>
        <item>Hindrance - Too many trees (HTR)</item>
        <item>Steepness - Slope (STSL)</item>
        <item>Steepness - Hilly (STH)</item>
        <item>Wagon access - Entry rd. inaccessible (WAI)</item>
        <item>Wagon access - No entry rd. (WAN)</item>
        <item>Wagon access - Entry via river (WARI)</item>
        <item>Wagon access - Maneuver difficult (WAMD)</item>
    </string-array>
    <string-array name="mechMeth">
        <item>- Mechanized Method -</item>
        <item>Yes (0)</item>
        <item>No (1)</item>
    </string-array>
    <string-array name="tract">
        <item>- Tractor Access -</item>
        <item>Yes (0)</item>
        <item>No (1)</item>
    </string-array>
    <string-array name="rowdir">
        <item>- Row Direction -</item>
        <item>Along entry rd. (A)</item>
        <item>Perpendicular to entry rd. (P)</item>
        <item>To be Determined (TBD)</item>
    </string-array>
    <string-array name="roadcond">
        <item>- Road Condition -</item>
        <item>Asphalt-OK-&lt;3m (AO&lt;3)</item>
        <item>Asphalt-Good-&lt;3m (AG&lt;3)</item>
        <item>Asphalt-Poor-&lt;3m (AP&lt;3)</item>
        <item>Asphalt-OK-&gt;=3m (AO&gt;=3)</item>
        <item>Asphalt-Good-&gt;=3m (AG&gt;=3)</item>
        <item>Asphalt-Poor-&gt;=3m (AP&gt;=3</item>
        <item>Graded-OK-&lt;3m (GO&lt;3)</item>
        <item>Graded-Good-&lt;3m (GG&lt;3)</item>
        <item>Graded-Poor-&lt;3m (GP&lt;3)</item>
        <item>Graded-OK-&gt;=3m (GO&gt;=3)</item>
        <item>Graded-Good-&gt;=3m (GG&gt;=3)</item>
        <item>Graded-Poor-&gt;=3m (GP&gt;=3)</item>
        <item>NotGraded-OK-&lt;3m (NGO&lt;3)</item>
        <item>NotGraded-Good-&lt;3m (NGG&lt;3)</item>
        <item>NotGraded-Poor-&lt;3m (NGP&lt;3)</item>
        <item>NotGraded-OK-&gt;=3m (NGO&gt;=3)</item>
        <item>NotGraded-Good-&gt;=3m (NGG&gt;=3)</item>
        <item>NotGraded-Poor-&gt;=3m (NGP&gt;=3)</item>
    </string-array>
    <string-array name="cropclass">
        <item>- Crop Class -</item>
        <item>New Plant (NP)</item>
        <item>1st Rtn (R1)</item>
        <item>2nd Rtn (R2)</item>
        <item>3rd Rtn (R3)</item>
        <item>4th Rtn (R4)</item>
        <item>5th Rtn (R5)</item>
        <item>6th Rtn (R6)</item>
        <item>7th Rtn (R7)</item>
        <item>FAL (F)</item>
    </string-array>
    <string-array name="hvstmeth">
        <item>- Harvest Method -</item>
        <item>By Ton (T)</item>
        <item>Linear (L)</item>
    </string-array>
    <string-array name="canals">
        <item>Front (F)</item>
        <item>Left (L)</item>
        <item>Back (B)</item>
        <item>Right (R)</item>
    </string-array>
    <string-array name="harvestSched">
        <item>Date Planted</item>
        <item>Harvest Date</item>
    </string-array>
    <string-array name="cropCycle">
        <item>- Crop Cycle -</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>

</resources>