<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_back"
        android:title="@string/action_back"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_exportdb"
        android:title="@string/action_exportdb"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_restoreall"
        android:title="@string/action_restoreall"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_restoresel"
        android:title="@string/action_restoresel"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_backupdb"
        android:title="@string/action_backupdb"
        app:showAsAction="never"/>
</menu>